fix: outro erro do fluxo e z-index do modal

--- a/app/assets/stylesheets/admin/home.sass
+++ b/app/assets/stylesheets/admin/home.sass
@@ -3,7 +3,6 @@
     justify-content: center
     align-items: center
     position: fixed
-    z-index: 1
     left: 0
     top: 0
     width: 100%
@@ -12,7 +11,7 @@
     background-color: rgb(0,0,0)
     background-color: rgba(0,0,0,0.4)
     padding-top: 60px
-    z-index: 2
+    z-index: 7
 
 .my-titles-img
     width: 100px
